--- a/Mon3CoreRazorPages/Pages/Shared/_Layout.cshtml
+++ b/Mon3CoreRazorPages/Pages/Shared/_Layout.cshtml
@@ -31,8 +31,10 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-page="/Index">Home</a></li>
-                    <li><a asp-page="/About">About</a></li>
-                    <li><a asp-page="/Contact">Contact</a></li>
+                    <li><a asp-page="/Students/Index">Students</a></li>
+                    <li><a asp-page="/Courses/Index">Courses</a></li>
+                    <li><a asp-page="/Tutors/Index">Tutors</a></li>
+                    <li><a asp-page="/Departments/Index">Departments</a></li>
                 </ul>
             </div>
         </div>
@@ -43,9 +45,7 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; 2019 - Mon3CoreRazorPages</p>
-        </footer>
+        @*<partial name="_Footer"/>*@
     </div>
 
     <environment include="Development">
