Added CRUD pages for Courses, Students and enrollments.  Renamed context DbSets to plurals

--- a/Mon3CoreRazorPages/Pages/Enrollments/Index.cshtml
+++ b/Mon3CoreRazorPages/Pages/Enrollments/Index.cshtml
@@ -8,19 +8,19 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Enrollment[0].Grade)
+                @Html.DisplayNameFor(model => model.Enrollments[0].Grade)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Enrollment[0].Course)
+                @Html.DisplayNameFor(model => model.Enrollments[0].Course)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Enrollment[0].Student)
+                @Html.DisplayNameFor(model => model.Enrollments[0].Student)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Enrollment) {
+@foreach (var item in Model.Enrollments) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Grade)
